--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@stream-io/node-sdk": "^0.3.0",
     "@stream-io/video-react-sdk": "^1.2.16",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.18",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
     "react": "^18",
